--- a/www/index.html
+++ b/www/index.html
@@ -13,7 +13,20 @@
       var TestClass = ncmb.DataStore("RegisterTest2");
       var testRecord = new TestClass();
       testRecord.set("message2", "hello, world");
-      testRecord.save();
+    //  testRecord.save();
+    var ncmb = new NCMB(appKey, clientKey);
+
+      var TestClass2 = ncmb.Datastore("RegisterTest3");
+      var TestRecord2 = new TestClass();
+      testRecord2.set("message3","19RS074");
+
+      testRecord.save()
+.then(function(m){
+alert("success:" + JSON.stringify(m));
+})
+.catch(function(m){
+alert("fail:" + JSON.stringify(m));
+});
 
     </script>
 </head>
